# 2023_iT_CMake

./: README.md
Day10/: CMakeLists.txt
Day11/: CMakeLists.txt
Day11/include/: mysqrt.h
Day11/src/: main.cpp
Day13/MathFunctions/: CMakeLists.txt
Day13/Snapshot/1.0.0/: CMakeLists.txt
Day13/Snapshot/1.0.0/lib/: libmysqrt.so.1  libmysqrt.so.1.0.0
Day13/Snapshot/1.0.0/src/: main.cpp
Day13/Snapshot/1.0.1/MathFunctions/: CMakeLists.txt
Day13/Snapshot/1.0.1/MathFunctions/src/: mysqrt.cpp
Day13/Snapshot/1.0.1/lib/: libmysqrt.so.1  libmysqrt.so.1.0.1
Day13/Snapshot/1.1.0/MathFunctions/: CMakeLists.txt
Day13/Snapshot/1.1.0/MathFunctions/include/: mysqrt.h
Day13/Snapshot/1.1.0/MathFunctions/src/: mysqrt.cpp
Day13/Snapshot/1.1.0/lib/: libmysqrt.so.1
Day13/Snapshot/2.0.0/MathFunctions/: CMakeLists.txt
Day13/Snapshot/2.0.0/MathFunctions/include/: mysqrt.h
Day13/Snapshot/2.0.0/MathFunctions/src/: mysqrt.cpp
Day13/Snapshot/2.0.0/lib/: libmysqrt.so.1.1.0  libmysqrt.so.2  libmysqrt.so.2.0.0
Day13/Snapshot/2.0.0/src/: main.cpp
Day14/範例1在內部安裝/Main/: CMakeLists.txt
Day14/範例1在內部安裝/MathFunctions/: CMakeLists.txt
Day14/範例2安裝至系統路徑/Main/: CMakeLists.txt
Day14/範例2安裝至系統路徑/Main/src/: main.cpp
Day14/範例2安裝至系統路徑/MathFunctions/: CMakeLists.txt
Day16/Main/: CMakeLists.txt
Day16/Main/src/: main.cpp
Day16/MathFunctions/: CMakeLists.txt
Day16/MathFunctions/include/: mysqrt.h
Day16/MathFunctions/src/: mysqrt.cpp
Day18/: CMakeLists.txt
Day18/MathFunctions/: CMakeLists.txt
Day18/src/: main.cpp
Day20/安裝至系統路徑/: CMakeLists.txt  version.h.in
Day20/直接指定OpenCV_DIR路徑/: CMakeLists.txt
Day20/直接指定OpenCV_DIR路徑/src/: main.cpp
Day21/Main/: CMakeLists.txt  version.h.in
Day21/Main/src/: main.cpp
Day22/Main/: CMakeLists.txt
Day22/MathFunctions/: CMakeLists.txt  Config.cmake.in
Day23/Main/: CMakeLists.txt
Day23/MathFunctions/: CMakeLists.txt  Config.cmake.in
Day23/MathFunctions/include/: mysqrt.h
Day23/MathFunctions/src/: mysqrt.cpp
Day24/Main/: CMakeLists.txt
Day24/MathFunctions/: CMakeLists.txt  Config.cmake.in
Day25/Main/: CMakeLists.txt
Day25/Main/src/: main.cpp
Day26/Main/: CMakeLists.txt
Day26/Main/src/: main.cpp
Day26/MathFunctions/: CMakeLists.txt  Config.cmake.in
Day3/: README.md  main.cpp
Day4/: README.md  main.cpp
Day5/: CMakeLists.txt
Day6/cmake/: CMakeLists.txt
Day6/cmake/src/: mysqrt.cpp
Day6/g++/include/: mysqrt.h
Day7/: CMakeLists.txt
Day7/include/: count.h
Day7/src/: count.cpp  main.cpp
Day8/: CMakeLists.txt
Day8/include/: greeting.h  hello.h
Day8/src/: greeting.cpp  hello.cpp  main.cpp
Day9/2/: CMakeLists.txt
Day9/2/MathFunctions/MathFunctions/: CMakeLists.txt
Day9/3/: CMakeLists.txt
Day9/3/MathFunctions/: CMakeLists.txt
Day9/3/MathFunctions/MathFunctions/include/: mysqrt.h
Day9/3/MathFunctions/MathFunctions/src/: mysqrt.cpp
Day9/3/src/: main.cpp
